--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
+  width: "100%";
   height: 100vh;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
   background: #ffffff;
